tests/ui/alloc-error/alloc-error-handler-bad-signature-1.stderr
error[E0308]: mismatched types
  --> $DIR/alloc-error-handler-bad-signature-1.rs:10:1
   |
LL |    #[alloc_error_handler]
   |    ---------------------- in this procedural macro expansion
LL | // fn oom(
LL | ||     info: &Layout,
LL | || ) -> ()
   | ||_______- arguments to this function are incorrect
LL | |  {
LL | |      loop {}
LL | |  }
   | |__^ expected `&Layout`, found `Layout`
   |
note: function defined here
  --> $DIR/alloc-error-handler-bad-signature-1.rs:10:4
   |
LL | fn oom(
   |    ^^^
LL |     info: &Layout,
   |     -------------
   = note: this error originates in the attribute macro `alloc_error_handler` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0308]: mismatched types
  --> $DIR/alloc-error-handler-bad-signature-1.rs:10:1
   |
LL |    #[alloc_error_handler]
   |    ---------------------- in this procedural macro expansion
LL | // fn oom(
LL | ||     info: &Layout,
LL | || ) -> ()
   | ||_______^ expected `!`, found `()`
LL | |  {
LL | |      loop {}
LL | |  }
   | |__- expected `!` because of return type
   |
   = note:   expected type `!`
           found unit type `()`
   = note: this error originates in the attribute macro `alloc_error_handler` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0308`.
